@@ -1,3 +1,8 @@
+2006-02-02  Per Bothner  <per@bothner.com>
+
+	* Namespace.java (make): New static method.
+	(toString): Changed to display Scheme literal syntax.
+
 2006-01-20  Per Bothner  <per@bothner.com>
 
 	* MethodProc.java (matchFailAsException): Don't get argument
